[gd_scene load_steps=10 format=3 uid="uid://dhajqpod48vs7"]

[ext_resource type="Texture2D" uid="uid://7d2405kkp1c7" path="res://tiles/world1-10/spritesMofeta.png" id="1_bo2j6"]
[ext_resource type="Script" path="res://scripts/enemysWord1to10/enemigo_mofeta.gd" id="1_feohk"]

[sub_resource type="Animation" id="Animation_m2oyo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesMofeta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q2tl3"]
resource_name = "idle"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesMofeta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_k7ltp"]
resource_name = "pedos"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesMofeta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 1.8, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_v10j4"]
resource_name = "run"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesMofeta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3bmf"]
_data = {
"RESET": SubResource("Animation_m2oyo"),
"idle": SubResource("Animation_q2tl3"),
"pedos": SubResource("Animation_k7ltp"),
"run": SubResource("Animation_v10j4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hv56a"]
size = Vector2(31, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jw4di"]
size = Vector2(26, 19)

[node name="enemigoMofeta" type="Area2D"]
script = ExtResource("1_feohk")

[node name="SpritesMofeta" type="Sprite2D" parent="."]
position = Vector2(61, 101)
scale = Vector2(0.404968, 0.359189)
texture = ExtResource("1_bo2j6")
hframes = 6
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a3bmf")
}
speed_scale = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(81, 102)
shape = SubResource("RectangleShape2D_hv56a")

[node name="areaPedo" type="Area2D" parent="."]

[node name="colisionPedo" type="CollisionShape2D" parent="areaPedo"]
position = Vector2(51, 100.5)
shape = SubResource("RectangleShape2D_jw4di")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
